<resources>
    <string name="app_name">COVID-19</string>
    <string name="welcome_title">Estadísticas COVID-19</string>
    <string name="welcome_description">En la siguiente aplicacion se pueden analizar los valores diarios de contagiados, recuperados y muertos debido al COVID-19 tanto en la provincia de córdoba, como en Argentina y en el mundo</string>
    <string name="date_title">Fecha</string>
    <string name="date_description">28/05/2020</string>
    <string name="button_name">Ver Valores</string>
    <string name="button_title">Navegar Hacia Estadisticas</string>
<<<<<<< HEAD
    <string name="title_activity_tab">tabActivity</string>
    <string name="tab_text_1">Córdoba</string>
    <string name="tab_text_2">Argentina</string>
    <string name="tab_text_3">Mundo</string>
=======
    <string name="tab_1_content">Cordoba</string>
    <string name="stats_presentation">"Valores para el día: 28/05/2020"</string>
    <string name="Contagiados_cba">"Contagiados: "</string>
    <string name="Recuperados_cba">"Recuperados: "</string>
    <string name="Fallecidos_cba">"Fallecidos: "</string>
    <string name="tab_2_content">Argentina</string>
    <string name="Contagiados_arg">"Contagiados: "</string>
    <string name="Recuperados_arg">"Recuperados: "</string>
    <string name="Fallecidos_arg">"Fallecidos: "</string>
    <string name="tab_3_content">Mundo</string>
    <string name="Contagiados_mundo">"Contagiados: "</string>
    <string name="Recuperados_mundo">"Recuperados: "</string>
    <string name="Fallecidos_mundo">"Fallecidos: "</string>
>>>>>>> acd46a472b57e0ae9b734acb2dfbd0b8362b0795
</resources>
