<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Tabs">

    <TabHost
        android:id="@android:id/tabhost"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:id="@+id/tab1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="130dp"
                        android:layout_marginTop="100dp"
                        android:layout_marginEnd="150dp"
                        android:text="@string/tab_1_content"
                        android:textSize="28sp" />
                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="150dp"
                        android:textSize="24sp"
                        android:text="@string/stats_presentation" />
                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="150dp"
                        android:layout_height="59dp"
                        android:layout_marginStart="10dp"
                        android:textSize="18sp"
                        android:text="@string/Contagiados_cba" />
                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="200dp"
                        android:layout_height="59dp"
                        android:layout_marginStart="10dp"
                        android:textSize="18sp"
                        android:text="@string/Recuperados_cba" />
                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="200dp"
                        android:layout_height="59dp"
                        android:layout_marginStart="10dp"
                        android:textSize="20sp"
                        android:text="@string/Fallecidos_cba" />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/tab2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="130dp"
                        android:layout_marginTop="100dp"
                        android:layout_marginEnd="150dp"
                        android:id="@+id/textView2"
                        android:textSize="28sp"
                        android:text="@string/tab_2_content"/>
                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="200dp"
                        android:layout_height="59dp"
                        android:layout_marginStart="10dp"
                        android:textSize="24sp"
                        android:text="@string/stats_presentation" />
                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="150dp"
                        android:layout_height="59dp"
                        android:layout_marginStart="10dp"
                        android:textSize="18sp"
                        android:text="@string/Contagiados_arg" />
                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="200dp"
                        android:layout_height="59dp"
                        android:layout_marginStart="10dp"
                        android:textSize="20sp"
                        android:text="@string/Recuperados_arg" />
                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="200dp"
                        android:layout_height="59dp"
                        android:layout_marginStart="10dp"
                        android:textSize="20sp"
                        android:text="@string/Fallecidos_arg" />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/tab3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="130dp"
                        android:layout_marginTop="100dp"
                        android:layout_marginEnd="150dp"
                        android:id="@+id/textView3"
                        android:textSize="24sp"
                        android:text="@string/tab_3_content"/>
                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="200dp"
                        android:layout_height="59dp"
                        android:layout_marginStart="10dp"
                        android:textSize="20sp"
                        android:text="@string/stats_presentation" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="150dp"
                        android:layout_height="59dp"
                        android:layout_marginStart="10dp"
                        android:textSize="18sp"
                        android:text="@string/Contagiados_mundo" />
                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="200dp"
                        android:layout_height="59dp"
                        android:layout_marginStart="10dp"
                        android:textSize="20sp"
                        android:text="@string/Recuperados_mundo" />
                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="200dp"
                        android:layout_height="59dp"
                        android:layout_marginStart="10dp"
                        android:textSize="20sp"
                        android:text="@string/Fallecidos_mundo" />
                </LinearLayout>
            </FrameLayout>
        </LinearLayout>
    </TabHost>
</LinearLayout>